new generation after style changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <div>
 </div>
 <div class="container"> 
-          <h1 id="francois-naude-beng-computer">Francois Naude (BEng Computer)</h1>
+          <h1 id="curriculum-vitae">Curriculum Vitae</h1>
+<h2 id="francois-naude-beng-computer">Francois Naude (BEng Computer)</h2>
 <h3 id="contact-details">Contact Details</h3>
 <p>B. F. J. Naude</p>
 <p>Mobile No: +27 71 674 9057</p>
