Playing with changes

--- a/cv.html
+++ b/cv.html
@@ -24,11 +24,8 @@
           <h1 id="francois-naude">Francois Naude</h1>
 <p><em>Software Developer (BEng Computer)</em></p>
 <h3 id="personal-summary">Personal Summary</h3>
-<section>
 <p>A highly efficient and versatile engineering professional, with demonstrated expertise in systems design and implementation. Specialises in problem solving on multiple levels, while maintaining awareness of system wide implications. Built and maintained a reputation of integrity, exceptional work quality and an open approach to design solutions. A go to person for technical recommendations.</p>
-</section>
 <h3 id="skills">Skills</h3>
-<section>
 <ul>
 <li>Strong analytical and problem solving skills</li>
 <li>Prioritising multiple responsibilities, without compromising on work quality</li>
@@ -37,9 +34,7 @@
 <li>Strong communication skills of technical ideas to both technical and non technical colleagues</li>
 <li>Build and maintain physical and virtual computer networks</li>
 </ul>
-</section>
 <h3 id="tools-technologies">Tools &amp; Technologies</h3>
-<section>
 <ul>
 <li>C, C++ and Lua for Windows (5 years)</li>
 <li>Microsoft Visual Studio (5 years)</li>
@@ -57,9 +52,7 @@
 <li>S3 &amp; Cloudfront for website hosting</li>
 </ul></li>
 </ul>
-</section>
 <h3 id="employment">Employment</h3>
-<section>
 <h5 id="april-2018---present">April 2018 - Present</h5>
 <p>Developer at uAfrica.com working on a microservice based software as a service platform for courier logistics.</p>
 <p><strong>Responsibilities</strong></p>
@@ -83,17 +76,13 @@
 <li>Internal tool development: Helper applications for support teams, diagnostic applications for in-house hardware etc.</li>
 <li>Network, server and account administrator (Linux &amp; Windows)</li>
 </ul>
-</section>
 <h3 id="education">Education</h3>
-<section>
 <ul>
 <li>Bachelors in Computer Engineering (BEng Computer Cum Laude) at the University of Pretoria(UP) (2009 - 2012)</li>
 <li>Cisco Certified Network Associate 1 to 4 from the University of Pretoria (2009-2010)</li>
 <li>Cisco Certified Network Professional 1 (2011)</li>
 </ul>
-</section>
 <h3 id="achievements">Achievements</h3>
-<section>
 <ul>
 <li>Consistently exceeding performance measures, demonstrated through performance reviews and stakeholder feedback</li>
 <li>Academic honorary colours from University of Pretoria (2012)</li>
@@ -101,14 +90,13 @@
 <li>Awarded best third year computer engineering project from University of Pretoria (2011)</li>
 <li>Silver merit for academic achievement in computer engineering from University of Pretoria (2011)</li>
 </ul>
-</section>
 <h3 id="contact-details">Contact Details</h3>
-<section>
 <p><strong>Mobile Number</strong><br />
 +27 71 674 9057</p>
 <p><strong>E-mail</strong><br />
 mail@bfjnaude.com</p>
   </div>
-</section>
+<footer>
+</footer>
 </body>
 </html>
