--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<a class="navbar-brand" href="#"> Resume </a>
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#personal-summary">Summary</a>
                     </li>
