Added github profile link

--- a/index.html
+++ b/index.html
@@ -270,6 +270,12 @@
                         <strong>E-mail</strong><br />
                         mail@bfjnaude.com
                     </p>
+                    <p>
+                        <a href="https://github.com/bfjnaude"><span>
+                            <img src="img/GitHub-Mark-32px.png" alt="github mark"><br/>
+                            bfjnaude
+                        </span>
+                    </p>
                 </section>
             </div>
         </div>
