Added email link

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     </p>
                     <p>
                         <strong>E-mail</strong><br />
-                        mail@bfjnaude.com
+                        <a href="mailto:mail@bfjnaude.com">mail@bfjnaude.com</a>
                     </p>
                     <p>
                         <a href="https://github.com/bfjnaude"><span>
