Contacts row with icons in grid system

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"
-        ></script>
+        ></script> 
+        <script src="https://kit.fontawesome.com/4825cd63d5.js"></script>
         <script>
             document.addEventListener("DOMContentLoaded", yall);
         </script>
@@ -192,14 +193,12 @@
                         <li>Finding and fixing bugs in production</li>
                         <li>Product development in Lua and C/C++</li>
                         <li>
-                            Product management: drafting specifications and test procedure documents, cooperating with
-                            production teams, ensuring that deadlines are met etc.
+                            Product management: Documenting specifications and test procedures, engaging with production teams, ensuring key deliverable deadlines were met
                         </li>
                         <li>Documentation of codebases</li>
                         <li>Product quality assurance</li>
                         <li>
-                            Internal tool development: Helper applications for support teams, diagnostic applications
-                            for in-house hardware etc.
+                            Internal tool development: Helper applications for support teams, diagnostic applications for in-house hardware
                         </li>
                         <li>Network, server and account administrator (Linux &amp; Windows)</li>
                     </ul>
@@ -216,8 +215,7 @@
                 <section>
                     <ul>
                         <li>
-                            Bachelors in Computer Engineering (BEng Computer Cum Laude) at the University of
-                            Pretoria(UP) (2009 - 2012)
+                            Bachelor Degree in Computer Engineering (BEng Computer Cum Laude) from the University of Pretoria (2009 - 2012)
                         </li>
                         <li>Cisco Certified Network Associate 1 to 4 from the University of Pretoria (2009-2010)</li>
                         <li>Cisco Certified Network Professional 1 (2011)</li>
@@ -261,22 +259,35 @@
 				<h3 >Contact Details</h3>
 			</div>
             <div class="row copy">
-                <section class="section-contacts">
-                    <p>
-                        <strong>Mobile Number</strong><br />
-                        +27 71 674 9057
-                    </p>
-                    <p>
-                        <strong>E-mail</strong><br />
-                        <a href="mailto:mail@bfjnaude.com">mail@bfjnaude.com</a>
-                    </p>
-                    <p>
-                        <a href="https://github.com/bfjnaude"><span>
-                            <img src="img/GitHub-Mark-32px.png" alt="github mark"><br/>
-                            bfjnaude
-                        </span>
-                    </p>
+                <div class="col-sm-12">
+                <section class="section-contacts"> 
+                    <div class="row row-contacts">
+                        <div class="col-sm-1">
+                            <i class="fas fa-mobile-alt fa-2x"></i> 
+                        </div>
+                        <div class="col-sm-5">
+                            +27 71 674 9057
+                        </div>
+                    </div>
+                    <div class="row row-contacts">
+                        <div class="col-sm-1">
+                            <i class="fas fa-envelope fa-2x"></i> 
+                        </div>
+                        <div class="col-sm-5">
+                            <a href="mailto:mail@bfjnaude.com">mail@bfjnaude.com</a>
+                        </div>
+                    </div>
+
+                    <div class="row row-contacts">
+                        <div class="col-sm-1">
+                            <img src="img/GitHub-Mark-32px.png" alt="github mark">
+                        </div>
+                        <div class="col-sm-5">
+                            <a href="https://github.com/bfjnaude"> bfjnaude</a>
+                        </div>
+                    </div>
                 </section>
+            </div>
             </div>
         </div>
         <footer></footer>
