--- a/index.html
+++ b/index.html
@@ -258,31 +258,31 @@
 			<div id="contact-details">
 				<h3 >Contact Details</h3>
 			</div>
-            <div class="row copy">
-                <div class="col-sm-12">
+            <div class="row row-contacts">
+                <div class="col">
                 <section class="section-contacts"> 
-                    <div class="row row-contacts">
-                        <div class="col-sm-1">
+                    <div class="row row-contacts-sub">
+                        <div class="col-xs-3 col-sm-1">
                             <i class="fas fa-mobile-alt fa-2x"></i> 
                         </div>
-                        <div class="col-sm-5">
+                        <div class="col-xs-6 col-sm-6">
                             +27 71 674 9057
                         </div>
                     </div>
-                    <div class="row row-contacts">
-                        <div class="col-sm-1">
+                    <div class="row row-contacts-sub">
+                        <div class="col-xs-3 col-sm-1">
                             <i class="fas fa-envelope fa-2x"></i> 
                         </div>
-                        <div class="col-sm-5">
+                        <div class="col-xs-6 col-sm-6">
                             <a href="mailto:mail@bfjnaude.com">mail@bfjnaude.com</a>
                         </div>
                     </div>
 
-                    <div class="row row-contacts">
-                        <div class="col-sm-1">
+                    <div class="row row-contacts-sub">
+                        <div class="col-xs-3 col-sm-1">
                             <img src="img/GitHub-Mark-32px.png" alt="github mark">
                         </div>
-                        <div class="col-sm-5">
+                        <div class="col-xs-6 col-sm-6">
                             <a href="https://github.com/bfjnaude"> bfjnaude</a>
                         </div>
                     </div>
