Added download link for PDF

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 				<div class="col">
 					<h1 id="francois-naude">Francois Naude</h1>
 					<p><em>Software Developer (BEng Computer)</em></p>
+					<a href="tex/CV_Francois_Naude.pdf" download><i class="fas fa-download"></i>&nbsp Download PDF</a>
 				</div>
 			</div>
 
