--- a/cv.html
+++ b/cv.html
@@ -53,6 +53,18 @@
 </ul></li>
 </ul>
 <h3 id="employment">Employment</h3>
+<h5 id="november-2019---present">November 2019 - Present</h5>
+<p>Senior Developer at TrueVolve Technologies working on legacy system maintenance and feature development of Linux-based C++/Golang services.</p>
+<p><strong>Responsibilities</strong> - Finding and fixing bugs in legacy C++ code - Designing and adding new features to existing APIs in C++ and Golang - Updating protocol documenation - RESTful Web API design</p>
+<h5 id="april-2018---october-2019">April 2018 - October 2019</h5>
+<p>Developer at uAfrica.com working on a microservice based software as a service platform for courier logistics.</p>
+<p><strong>Responsibilities</strong></p>
+<ul>
+<li>Microservice design and implementation in Golang</li>
+<li>RESTful Web API design</li>
+<li>Designing and maintaining scalable infrastructure on AWS with servers and serverless</li>
+<li>Implementing frontend for microservice platform using ReactJS and Bootstrap CSS</li>
+</ul>
 <h5 id="april-2018---present">April 2018 - Present</h5>
 <p>Developer at uAfrica.com working on a microservice based software as a service platform for courier logistics.</p>
 <p><strong>Responsibilities</strong></p>
