--- a/index.html
+++ b/index.html
@@ -169,7 +169,20 @@
 			</div>
             <div class="row copy">
                 <section>
-                    <h5 id="april-2018---present">April 2018 - Present</h5>
+                    <h5 id="november-2019---present">November 2019 - present</h5>
+                    <p>
+                        Senior Developer at TrueVolve Technologies working on legacy system maintenance and feature development of Linux-based
+                        C++/Golang services.
+                    </p>
+
+                    <p><strong>Responsibilities</strong></p>
+                    <ul>
+                        <li>Finding and fixing bugs in legacy C++ code</li>
+                        <li>Designing and adding new features to existing APIs in C++ and Golang</li>
+                        <li>Updating protocol documenation</li>
+                        <li>RESTful Web API design</li>
+                    </ul>
+                    <h5 id="april-2018---october-2019">April 2018 - October 2019</h5>
                     <p>
                         Developer at uAfrica.com working on a microservice based software as a service platform for
                         courier logistics.
