Add missing date to truevolve work

--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
 
         <div class="row copy">
             <section>
+                <h5 id="november-2019---present">November 2019 - Present</h5>
                 <p>Senior Developer at TrueVolve Technologies working on legacy system maintenance and feature
                     development of Linux-based C++/Golang services.</p>
                 <p><strong>Responsibilities</strong> - Finding and fixing bugs in legacy C++ code - Designing and adding
