--- a/cv.html
+++ b/cv.html
@@ -50,11 +50,13 @@
 <li>S3 &amp; Cloudfront for website hosting</li>
 </ul></li>
 <li>ISO 20248, x509 and asymmetric and symmetric cryptography (1+ year)</li>
+<li>RFID readers</li>
+<li>Zebra printers</li>
 </ul>
 <h3 id="employment">Employment</h3>
 <h5 id="november-2019---present">November 2019 - Present</h5>
 <p>Senior Developer at TrueVolve Technologies working on legacy system maintenance and new product development in the ISO 20248 domain.</p>
-<p><strong>Responsibilities</strong> - Finding and fixing bugs in legacy C++ code - Designing and adding new features to existing APIs in C++ and Golang - Updating protocol documenation - RESTful Web API design - Reviewing changes to and updating implementations of the ISO 20248 standard - Designing and implementing an AWS cloud based system - Cross compilation of C and Golang for arm - Wrapping/porting of C and Golang to Java &amp; Kotlin</p>
+<p><strong>Responsibilities</strong> - Finding and fixing bugs in legacy C++ code - Designing and adding new features to existing APIs in C++ and Golang - Updating protocol documenation - RESTful Web API design - Reviewing changes to and updating implementations of the ISO 20248 standard - Designing and implementing an AWS cloud based system - Cross compilation of C and Golang for arm - Wrapping/porting of C and Golang to Java &amp; Kotlin - Interfacing with RFID readers and printers</p>
 <h5 id="april-2018---october-2019">April 2018 - October 2019</h5>
 <p>Developer at uAfrica.com working on a microservice based software as a service platform for courier logistics.</p>
 <p><strong>Responsibilities</strong></p>
