Website export update

--- a/index.html
+++ b/index.html
@@ -116,7 +116,6 @@
                         Strong communication skills of technical ideas to both technical and non technical
                         colleagues
                     </li>
-                    <li>Build and maintain physical and virtual computer networks</li>
                 </ul>
             </section>
         </div>
@@ -130,26 +129,25 @@
         <div class="row copy">
             <section>
                 <ul>
-                    <li>C, C++ and Lua for Windows (5 years)</li>
-                    <li>Microsoft Visual Studio (5 years)</li>
-                    <li>Server administration in Windows and Linux (5 years)</li>
-                    <li>Golang (2 years)</li>
-                    <li>HTML, JS &amp; CSS (1+ year)</li>
-                    <li>ReactJS (2 years)</li>
-                    <li>Postgresql (1+ year)</li>
-                    <li>
-                        Amazon Web Services (1+ year)
+                    <li>Golang (2+ years)</li>
+                    <li>Postgresql &amp; MySQL (2+ years)</li>
+                    <li>Amazon Web Services (2+ years)
                         <ul>
                             <li>Cloudformation for resource deployment</li>
                             <li>IAM &amp; Cognito for user authentication and authorization</li>
-                            <li>
-                                Lamda, Elastics Cloud Compute and Elastic Container Service for running functions
-                                and containers
-                            </li>
+                            <li>Lamda, Elastics Cloud Compute and Elastic Container Service for running functions and
+                                containers</li>
                             <li>API Gateway for RESTfull API hosting</li>
                             <li>S3 &amp; Cloudfront for website hosting</li>
                         </ul>
                     </li>
+                    <li>C, C++ and Lua for Windows in Visual Studio (5 years)</li>
+                    <li>Server administration in Windows and Linux (5 years)</li>
+                    <li>HTML, JS &amp; CSS (1+ year)</li>
+                    <li>ReactJS (1+ year)</li>
+                    <li>ISO 20248, x509 and asymmetric and symmetric cryptography (1+ year)</li>
+                    <li>RFID readers</li>
+                    <li>Zebra printers</li>
                 </ul>
             </section>
         </div>
@@ -164,16 +162,17 @@
         <div class="row copy">
             <section>
                 <h5 id="november-2019---present">November 2019 - Present</h5>
-                <p>Senior Developer at TrueVolve Technologies working on legacy system maintenance and feature
-                    development of Linux-based C++/Golang services.</p>
+                <p>Senior Developer at TrueVolve Technologies working on legacy system maintenance and new product
+                    development in the ISO 20248 domain.</p>
                 <p><strong>Responsibilities</strong> - Finding and fixing bugs in legacy C++ code - Designing and adding
                     new features to existing APIs in C++ and Golang - Updating protocol documenation - RESTful Web API
-                    design</p>
-                <h5 id="april-2018---october-2019">April 2018 - October 2019</h5>
-                <p>
-                    Developer at uAfrica.com working on a microservice based software as a service platform for
-                    courier logistics.
+                    design - Reviewing changes to and updating implementations of the ISO 20248 standard - Designing and
+                    implementing an AWS cloud based system - Cross compilation of C and Golang for arm -
+                    Wrapping/porting of C and Golang to Java &amp; Kotlin - Interfacing with RFID readers and printers
                 </p>
+                <h5 id="april-2018---october-2019">April 2018 - October 2019</h5>
+                <p>Developer at uAfrica.com working on a microservice based software as a service platform for courier
+                    logistics.</p>
                 <p><strong>Responsibilities</strong></p>
                 <ul>
                     <li>Microservice design and implementation in Golang</li>
