--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <li> Designing and implementing an AWS cloud based system </li>
                     <li> Cross compilation of C and Golang for arm </li>
                     <li> Wrapping/porting of C and Golang to Java &amp; Kotlin </li>
-                    <li> Interfacing with RFID readers and printers
+                    <li> Interfacing with RFID readers and printers </li>
                 </ul>
                 </p>
                 <h5 id="april-2018---october-2019">April 2018 - October 2019</h5>
