--- a/cv.html
+++ b/cv.html
@@ -35,8 +35,11 @@
 </ul>
 <h3 id="tools-technologies">Tools &amp; Technologies</h3>
 <ul>
+<li>C, C++ and Lua for Windows in Visual Studio (5 years)</li>
+<li>Server administration in Windows and Linux (5 years)</li>
 <li>Golang (2+ years)</li>
-<li>Postgresql &amp; MySQL (2+ years)</li>
+<li>Rust (&lt;1 year)</li>
+<li>Postgresql &amp; MySQL (3+ years)</li>
 <li>Amazon Web Services (2+ years)
 <ul>
 <li>Cloudformation for resource deployment</li>
@@ -45,8 +48,6 @@
 <li>API Gateway for RESTfull API hosting</li>
 <li>S3 &amp; Cloudfront for website hosting</li>
 </ul></li>
-<li>C, C++ and Lua for Windows in Visual Studio (5 years)</li>
-<li>Server administration in Windows and Linux (5 years)</li>
 <li>HTML, JS &amp; CSS (1+ year)</li>
 <li>ReactJS (1+ year)</li>
 <li>ISO 20248, x509 and asymmetric and symmetric cryptography (1+ year)</li>
@@ -54,9 +55,12 @@
 <li>Zebra printers</li>
 </ul>
 <h3 id="employment">Employment</h3>
-<h5 id="november-2019---present">November 2019 - Present</h5>
+<h5 id="may-2021---present">May 2021 - Present</h5>
+<p>Senior Backend Developer at Zulzi On Demand working on backend services for an e-commerce delivery platform.</p>
+<p><strong>Responsibilities</strong> - Maintaining existing Rust codebase - Adding new features and APIs to existing service based platform</p>
+<h5 id="november-2019---april-2021">November 2019 - April 2021</h5>
 <p>Senior Developer at TrueVolve Technologies working on legacy system maintenance and new product development in the ISO 20248 domain.</p>
-<p><strong>Responsibilities</strong> - Finding and fixing bugs in legacy C++ code - Designing and adding new features to existing APIs in C++ and Golang - Updating protocol documenation - RESTful Web API design - Reviewing changes to and updating implementations of the ISO 20248 standard - Designing and implementing an AWS cloud based system - Cross compilation of C and Golang for arm - Wrapping/porting of C and Golang to Java &amp; Kotlin - Interfacing with RFID readers and printers</p>
+<p><strong>Responsibilities</strong> - Finding and fixing bugs in legacy C++ code - Designing and adding new features to existing APIs in C++ and Golang - Updating protocol documentation - RESTful Web API design - Reviewing changes to and updating implementations of the ISO 20248 standard - Designing and implementing an AWS cloud based system - Cross compilation of C and Golang for arm - Wrapping/porting of C and Golang to Java &amp; Kotlin - Interfacing with RFID readers and printers</p>
 <h5 id="april-2018---october-2019">April 2018 - October 2019</h5>
 <p>Developer at uAfrica.com working on a microservice based software as a service platform for courier logistics.</p>
 <p><strong>Responsibilities</strong></p>
