--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                     <li>C, C++ and Lua for Windows in Visual Studio (5 years)</li>
                     <li>Server administration in Windows and Linux (5 years)</li>
                     <li>Golang (2+ years)</li>
-                    <li>Postgresql &amp; MySQL (2+ years)</li>
+                    <li>Rust (&lt;1 year)</li>
+                    <li>Postgresql &amp; MySQL (3+ years)</li>
                     <li>Amazon Web Services (2+ years)
                         <ul>
                             <li>Cloudformation for resource deployment</li>
@@ -161,7 +162,15 @@
 
         <div class="row copy">
             <section>
-                <h5 id="november-2019---present">November 2019 - Present</h5>
+                <h5 id="may-2021---present">May 2021 - Present</h5>
+                <p>Senior Backend Developer at Zulzi On Demand working on backend services for an e-commerce delivery platform.</p>
+                <p><strong>Responsibilities</strong></p>
+                <ul>
+                    <li>Maintaining existing Rust codebase </li>
+                    <li>Adding new features and APIs to existing service based platform</li>
+                </ul>
+
+                <h5 id="november-2019---april-2021">November 2019 - April 2021</h5>
                 <p>Senior Developer at TrueVolve Technologies working on legacy system maintenance and new product
                     development in the ISO 20248 domain.</p>
                 <p><strong>Responsibilities</strong>
