--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
         <div class="row copy">
             <section>
                 <ul>
+                    <li>Rust (1 year)</li>
+                    <li>Golang (2+ years)</li>
+                    <li>Postgresql &amp; MySQL (4 years)</li>
                     <li>C, C++ and Lua for Windows in Visual Studio (5 years)</li>
                     <li>Server administration in Windows and Linux (5 years)</li>
-                    <li>Golang (2+ years)</li>
-                    <li>Rust (&lt;1 year)</li>
-                    <li>Postgresql &amp; MySQL (3+ years)</li>
                     <li>Amazon Web Services (2+ years)
                         <ul>
                             <li>Cloudformation for resource deployment</li>
