--- a/cv.html
+++ b/cv.html
@@ -35,12 +35,14 @@
 </ul>
 <h3 id="tools-technologies">Tools &amp; Technologies</h3>
 <ul>
+<li>Golang (3+ years)</li>
+<li>Kubernetes + Helm (1 year)</li>
 <li>Rust (1 year)</li>
-<li>Golang (2+ years)</li>
 <li>Postgresql &amp; MySQL (4 years)</li>
-<li>C, C++ and Lua for Windows in Visual Studio (5 years)</li>
+<li>C++, msvc and gcc (5 years)</li>
+<li>Lua (5 years)</li>
 <li>Server administration in Windows and Linux (5 years)</li>
-<li>Amazon Web Services (2+ years)
+<li>Amazon Web Services (3+ years)
 <ul>
 <li>Cloudformation for resource deployment</li>
 <li>IAM &amp; Cognito for user authentication and authorization</li>
@@ -51,11 +53,13 @@
 <li>HTML, JS &amp; CSS (1+ year)</li>
 <li>ReactJS (1+ year)</li>
 <li>ISO 20248, x509 and asymmetric and symmetric cryptography (1+ year)</li>
-<li>RFID readers</li>
-<li>Zebra printers</li>
+<li>RFID readers and Zebra RFID printers</li>
 </ul>
 <h3 id="employment">Employment</h3>
-<h5 id="may-2021---present">May 2021 - Present</h5>
+<h5 id="july-2022---present">July 2022 - Present</h5>
+<p>Senior Software Engineer at Entersekt Pty Ltd. working on backend fintech services to enable safe authentication and authorization.</p>
+<p><strong>Responsibilities</strong> - Maintaining existing Golang codebase - Designing and implementing new cloud &amp; cluster based services according to API specifications - Working as part of a team with a high focus on quality, testing and code review</p>
+<h5 id="may-2021---june-2022">May 2021 - June 2022</h5>
 <p>Senior Backend Developer at Zulzi On Demand working on backend services for an e-commerce delivery platform.</p>
 <p><strong>Responsibilities</strong> - Maintaining existing Rust codebase - Adding new features and APIs to existing service based platform</p>
 <h5 id="november-2019---april-2021">November 2019 - April 2021</h5>
