--- a/index.html
+++ b/index.html
@@ -129,12 +129,15 @@
         <div class="row copy">
             <section>
                 <ul>
+                    <li>Golang (3+ years)</li>
                     <li>Rust (1 year)</li>
-                    <li>Golang (2+ years)</li>
+                    <li> Kubernetes + Helm (1 year)</li>
                     <li>Postgresql &amp; MySQL (4 years)</li>
                     <li>C, C++ and Lua for Windows in Visual Studio (5 years)</li>
+                    <li>C++, msvc and gcc (5 years)</li>
+                    <li>Lua (5 years)</li>
                     <li>Server administration in Windows and Linux (5 years)</li>
-                    <li>Amazon Web Services (2+ years)
+                    <li>Amazon Web Services (3+ years)
                         <ul>
                             <li>Cloudformation for resource deployment</li>
                             <li>IAM &amp; Cognito for user authentication and authorization</li>
@@ -147,8 +150,7 @@
                     <li>HTML, JS &amp; CSS (1+ year)</li>
                     <li>ReactJS (1+ year)</li>
                     <li>ISO 20248, x509 and asymmetric and symmetric cryptography (1+ year)</li>
-                    <li>RFID readers</li>
-                    <li>Zebra printers</li>
+                    <li>RFID readers and Zebra RFID printers </li>
                 </ul>
             </section>
         </div>
@@ -162,8 +164,20 @@
 
         <div class="row copy">
             <section>
-                <h5 id="may-2021---present">May 2021 - Present</h5>
-                <p>Senior Backend Developer at Zulzi On Demand working on backend services for an e-commerce delivery platform.</p>
+                <h5 id="july-2022---present">July 2022 - Present</h5>
+                <p> Senior Software Engineer at Entersekt Pty Ltd. working on backend fintech services to enable safe
+                    authentication and authorization. </p>
+                <p><strong>Responsibilities</strong></p>
+                <ul>
+                    <li>Maintaining existing Golang codebase</li>
+                    <li>Designing and implementing new cloud & cluster based services according to API specifications
+                    </li>
+                    <li>Working as part of a team with a high focus on quality, testing and code review</li>
+                </ul>
+
+                <h5 id="may-2021---june-2022">May 2021 - June 2022</h5>
+                <p>Senior Backend Developer at Zulzi On Demand working on backend services for an e-commerce delivery
+                    platform.</p>
                 <p><strong>Responsibilities</strong></p>
                 <ul>
                     <li>Maintaining existing Rust codebase </li>
