updates for 2024 website

--- a/cv.html
+++ b/cv.html
@@ -36,7 +36,7 @@
 <h3 id="tools-technologies">Tools &amp; Technologies</h3>
 <ul>
 <li>Golang (3+ years)</li>
-<li>Kubernetes + Helm (1 year)</li>
+<li>Kubernetes + Helm (1+ year)</li>
 <li>Rust (1 year)</li>
 <li>Postgresql &amp; MySQL (4 years)</li>
 <li>C++, msvc and gcc (5 years)</li>
@@ -56,7 +56,7 @@
 <li>RFID readers and Zebra RFID printers</li>
 </ul>
 <h3 id="employment">Employment</h3>
-<h5 id="july-2022---present">July 2022 - Present</h5>
+<h5 id="july-2022---april-2024">July 2022 - April 2024</h5>
 <p>Senior Software Engineer at Entersekt Pty Ltd. working on backend fintech services to enable safe authentication and authorization.</p>
 <p><strong>Responsibilities</strong> - Maintaining existing Golang codebase - Designing and implementing new cloud &amp; cluster based services according to API specifications - Working as part of a team with a high focus on quality, testing and code review</p>
 <h5 id="may-2021---june-2022">May 2021 - June 2022</h5>
@@ -113,7 +113,7 @@
 </ul>
 <h3 id="contact-details">Contact Details</h3>
 <p><strong>Mobile Number</strong><br />
-+27 71 674 9057</p>
++61 494 067 145</p>
 <p><strong>E-mail</strong><br />
 mail@bfjnaude.com</p>
   </div>
