--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <ul>
                     <li>Golang (3+ years)</li>
                     <li>Rust (1 year)</li>
-                    <li>Kubernetes + Helm (1 year)</li>
+                    <li>Kubernetes + Helm (1+ year)</li>
                     <li>Postgresql &amp; MySQL (4 years)</li>
                     <li>C, C++ and Lua for Windows in Visual Studio (5 years)</li>
                     <li>C++, msvc and gcc (5 years)</li>
@@ -164,7 +164,7 @@
 
         <div class="row copy">
             <section>
-                <h5 id="july-2022---present">July 2022 - Present</h5>
+                <h5 id="july-2022---present">July 2022 - April 2024</h5>
                 <p> Senior Software Engineer at Entersekt Pty Ltd. working on backend fintech services to enable safe
                     authentication and authorization. </p>
                 <p><strong>Responsibilities</strong></p>
@@ -298,7 +298,7 @@
                             <i class="fas fa-mobile-alt fa-2x"></i>
                         </div>
                         <div class="col-xs-6 col-sm-6">
-                            +27 71 674 9057
+                            +61 494 067 145 
                         </div>
                     </div>
                     <div class="row row-contacts-sub">
