--- a/index.html
+++ b/index.html
@@ -129,12 +129,11 @@
         <div class="row copy">
             <section>
                 <ul>
-                    <li>Golang (3+ years)</li>
+                    <li>Golang (4+ years)</li>
                     <li>Rust (1 year)</li>
                     <li>Kubernetes + Helm (1+ year)</li>
-                    <li>Postgresql &amp; MySQL (4 years)</li>
-                    <li>C, C++ and Lua for Windows in Visual Studio (5 years)</li>
-                    <li>C++, msvc and gcc (5 years)</li>
+                    <li>SQL: Postgresql &amp; MySQL (4+ years)</li>
+                    <li>C++, msvc and gcc (5+ years)</li>
                     <li>Lua (5 years)</li>
                     <li>Server administration in Windows and Linux (5 years)</li>
                     <li>Amazon Web Services (3+ years)
@@ -298,7 +297,7 @@
                             <i class="fas fa-mobile-alt fa-2x"></i>
                         </div>
                         <div class="col-xs-6 col-sm-6">
-                            +61 494 067 145 
+                            +61 494 067 145
                         </div>
                     </div>
                     <div class="row row-contacts-sub">
